<resources>
    <string name="app_name">丢丢</string>
    <string name="slogon">分享快乐  寻找曾经的你</string>

    <string name="btn_register">新用户</string>
    <string name="btn_login">登录</string>
    <string name="btn_forget">忘记密码?</string>
    <string name="hint_mobile">手机号</string>
    <string name="hint_password">密码</string>

    <string name="main_nav_home">首页</string>
    <string name="main_nav_mess">消息</string>
    <string name="main_nav_cont">联系人</string>

    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新</string>
    <string name="p2refresh_doing_end_refresh">正在获取最新数据</string>
    <string name="p2refresh_refresh_lasttime">最近更新</string>
    <string name="p2refresh_doing_end">已经到底啦</string>

    <string name="contact_start_msg">发消息</string>
    <string name="loging_status">登录中...</string>
    
    <string name="tmpString">上大学的时候，我们都会遇到一种典型的大学老师：明明在教一门必修又基础的课却把内容、作业和考试的难度上升到让所有人都痛不欲生的地步；似乎对某些学问有着极为深入的研究和领悟，可上他们的课却很难从中感到被震慑的魅力；绝对不是系里的“红人”，搜索他们的名字，除了担任合作作者的教材之外很难找到他们独立写就的著作；与此同时，他们为人严谨、刻板、无法通融，执着于出勤、考分、论文质量，像一些横躺在自由散漫、行云流水的大学生活中的大硬石，让人头疼。但比起那些如偶像一般让人心驰神往的老师、成为意见领袖或名人的老师、手腕灵活像政治家一样翻云覆雨的老师，倒是这些“石人”让大学更像大学，保持了它本应有的庄严与稳定。</string>

    <string name="timespan_now">刚刚</string>
    <plurals name="timespan_years">
        <item quantity="one">%d年前</item>
        <item quantity="other">%d年前</item>
    </plurals>
    <plurals name="timespan_months">
        <item quantity="one">%d月前</item>
        <item quantity="other">%d月前</item>
    </plurals>
    <plurals name="timespan_weeks">
        <item quantity="one">%d周前</item>
        <item quantity="other">%d周前</item>
    </plurals>
    <plurals name="timespan_days">
        <item quantity="one">%d天前</item>
        <item quantity="other">%d天前</item>
    </plurals>
    <plurals name="timespan_hours">
        <item quantity="one">%d小时前</item>
        <item quantity="other">%d小时前</item>
    </plurals>
    <plurals name="timespan_minutes">
        <item quantity="one">%d分钟前</item>
        <item quantity="other">%d分钟前</item>
    </plurals>
    <plurals name="timespan_seconds">
        <item quantity="one">%d秒前</item>
        <item quantity="other">%d秒前</item>
    </plurals>
    <plurals name="timespan_years_abbr">
        <item quantity="one">%dyr</item>
        <item quantity="other">%dyr</item>
    </plurals>
    <plurals name="timespan_months_abbr">
        <item quantity="one">%dmo</item>
        <item quantity="other">%dmo</item>
    </plurals>
    <plurals name="timespan_weeks_abbr">
        <item quantity="one">%dwk</item>
        <item quantity="other">%dwk</item>
    </plurals>
    <plurals name="timespan_days_abbr">
        <item quantity="one">%dd</item>
        <item quantity="other">%dd</item>
    </plurals>
    <plurals name="timespan_hours_abbr">
        <item quantity="one">%dh</item>
        <item quantity="other">%dh</item>
    </plurals>
    <plurals name="timespan_minutes_abbr">
        <item quantity="one">%dm</item>
        <item quantity="other">%dm</item>
    </plurals>
    <plurals name="timespan_seconds_abbr">
        <item quantity="one">%ds</item>
        <item quantity="other">%ds</item>
    </plurals>
</resources>
