<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatch"
    android:background="@mipmap/bg_theme">

    <com.bili.diushoujuaner.widget.scrollview.ReboundScrollView
        style="@style/MatchMatch"
        android:layout_above="@+id/layoutBottom"
        android:scrollbars="none">

        <LinearLayout
            style="@style/MatchMatch"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/x200"
                android:layout_height="@dimen/y200"
                android:layout_marginTop="@dimen/y180"
                android:src="@mipmap/logo_default" />

            <LinearLayout
                style="@style/MatchWrap"
                android:layout_marginLeft="@dimen/x72"
                android:layout_marginRight="@dimen/x72"
                android:layout_marginTop="@dimen/y100"
                android:background="@drawable/rectangle_white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/y110"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/x60"
                        android:layout_height="@dimen/y60"
                        android:layout_marginLeft="@dimen/x25"
                        android:src="@mipmap/icon_login_user" />

                    <EditText
                        android:id="@+id/edtMobile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/x10"
                        android:background="@null"
                        android:hint="@string/hint_mobile"
                        android:inputType="number"
                        android:maxLength="11"
                        android:textColor="@color/TC_WHITE"
                        android:textColorHint="@color/TC_WHITE_HINT"
                        android:textCursorDrawable="@drawable/cursor_white"
                        android:textSize="@dimen/x35"
                        android:textStyle="bold" />

                </LinearLayout>

                <View style="@style/line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/y110"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/x60"
                        android:layout_height="@dimen/y60"
                        android:layout_marginLeft="@dimen/x25"
                        android:src="@mipmap/icon_login_lock" />

                    <com.bili.diushoujuaner.widget.CustomEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/x10"
                        android:background="@null"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:textColor="@color/TC_WHITE"
                        android:textColorHint="@color/TC_WHITE_HINT"
                        android:textCursorDrawable="@drawable/cursor_white"
                        android:textSize="@dimen/x35"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                style="@style/BtnLongGreen"
                android:layout_marginTop="@dimen/y80"
                android:textStyle="bold"
                android:text="@string/btn_login" />

        </LinearLayout>

    </com.bili.diushoujuaner.widget.scrollview.ReboundScrollView>

    <LinearLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/TRANSPARENT"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layoutReset"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y96"
            android:layout_marginBottom="@dimen/y2"
            android:background="@drawable/rectangle_solid_transparent_white">

            <TextView
                style="@style/TextLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x76"
                android:layout_marginStart="@dimen/x76"
                android:text="@string/btn_forget"
                android:textColor="@color/TC_WHITE" />

            <ImageView
                android:layout_width="@dimen/x64"
                android:layout_height="@dimen/y64"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/x64"
                android:src="@mipmap/icon_arrow_right" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutRegister"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y96"
            android:background="@drawable/rectangle_solid_transparent_white">

            <TextView
                style="@style/TextLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x76"
                android:text="@string/btn_register"
                android:textColor="@color/TC_WHITE" />

            <ImageView
                android:layout_width="@dimen/x64"
                android:layout_height="@dimen/y64"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/x64"
                android:src="@mipmap/icon_arrow_right" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>